# WAVplayer

./: CMakeLists.txt  Main001.cpp
CLI/: CMakeLists.txt  class.cpp  class.h  main.cpp  test_setup.txt.txt
Computation/: CMakeLists.txt  Main001.cpp  interleave.cpp  interleave.h  mythread.cpp  mythread.h  playWave.cpp  playWave.hpp  protocol.txt  streamBuffer.h  streambuffer.cpp  win_wavout.cpp
GUI/: CMakeLists.txt  GUI.ui  main.cpp  uiClass.cpp  uiClass.h
TestInterleaving/: CMakeLists.txt  case1.txt  case10.txt  case2.txt  case3.txt  case4.txt  case5.txt  main.cpp  test_cases.txt
TestServer/: CMakeLists.txt  args65400.txt  args65410.txt  args65420.txt  main.cpp  tcpServerClass.cpp  tcpServerClass.h
