PROJECT(Computation)
STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
ADD_DEFINITIONS(-DUNICODE)

#Use MFC in a Shared DLL
ADD_DEFINITIONS(-D_AFXDLL)
SET(CMAKE_MFC_FLAG 2)

SET(QT_USE_QTMAIN TRUE)

FILE(GLOB_RECURSE HDRS_FILES *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp)
FILE(GLOB_RECURSE UI_FILES *.ui)
FILE(GLOB CD_FILES *.cd)

SET(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${SRCS_FILES} ${UI_FILES} ${HDRS_FILES} PARENT_SCOPE)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HDRS_FILES} ${SRCS_FILES})
SET_SOURCE_FILES_PROPERTIES(${CD_FILES} PROPERTIES HEADER_FILE_ONLY TRUE) 
qt5_use_modules (${PROJECT_NAME} Core)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER SRC)  	
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
